fixed cutting off issue

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -18,6 +18,7 @@ body{
     background-position: center;
     background-attachment: fixed;
     background-repeat:no-repeat;
+    margin-bottom: 10px;
 }
 html {
     background-color: #2f2fa2;
